--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         .table-row-hover:hover { background-color: #f8fafc; transform: translateY(-1px); box-shadow: 0 2px 4px rgba(0,0,0,0.02); }
     </style>
 </head>
-<body class="h-screen w-full overflow-hidden flex font-sans antialiased selection:bg-primary-100 selection:text-primary-800">
+<body class="h-screen w-full overflow-hidden font-sans antialiased selection:bg-primary-100 selection:text-primary-800">
 
     <div id="login-view" class="fixed inset-0 z-50 flex flex-col items-center justify-center bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] bg-slate-50 relative">
         <div class="absolute inset-0 bg-gradient-to-br from-slate-100/90 to-primary-50/90 backdrop-blur-sm"></div>
@@ -414,11 +414,10 @@
                             </div>
                         </div>
 
-                        <div class="space-y-6 relative before:absolute before:inset-0 before:ml-5 before:-translate-x-px md:before:mx-auto md:before:translate-x-0 before:h-full before:w-0.5 before:bg-gradient-to-b before:from-slate-200 before:via-slate-200 before:to-transparent">
+                        <div class="space-y-6">
                             
-                            <div class="relative flex items-center justify-between md:justify-normal md:odd:flex-row-reverse group is-active">
-                                <div class="flex items-center justify-center w-10 h-10 rounded-full border-4 border-white bg-slate-200 text-slate-500 shadow shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2 text-xs font-bold z-10">10:00</div>
-                                <div class="w-[calc(100%-4rem)] md:w-[calc(50%-2.5rem)] bg-white rounded-2xl shadow-sm border border-slate-200 p-5">
+                            <div class="relative group is-active">
+                                <div class="w-full bg-white rounded-2xl shadow-sm border border-slate-200 p-5">
                                     <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
                                         <div>
                                             <h3 class="font-bold text-slate-800 text-lg">佐藤 三郎 様</h3>
@@ -439,9 +438,8 @@
                                 </div>
                             </div>
 
-                            <div class="relative flex items-center justify-between md:justify-normal md:odd:flex-row-reverse group is-active">
-                                <div class="flex items-center justify-center w-10 h-10 rounded-full border-4 border-white bg-primary-500 text-white shadow shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2 text-xs font-bold z-10">13:00</div>
-                                <div class="w-[calc(100%-4rem)] md:w-[calc(50%-2.5rem)] bg-white rounded-2xl shadow-md border-2 border-primary-100 p-5">
+                            <div class="relative group is-active">
+                                <div class="w-full bg-white rounded-2xl shadow-md border-2 border-primary-100 p-5">
                                     <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
                                         <div>
                                             <div class="flex items-center gap-2">
@@ -483,9 +481,8 @@
                                 </div>
                             </div>
 
-                            <div class="relative flex items-center justify-between md:justify-normal md:odd:flex-row-reverse group is-active">
-                                <div class="flex items-center justify-center w-10 h-10 rounded-full border-4 border-white bg-slate-200 text-slate-500 shadow shrink-0 md:order-1 md:group-odd:-translate-x-1/2 md:group-even:translate-x-1/2 text-xs font-bold z-10">15:30</div>
-                                <div class="w-[calc(100%-4rem)] md:w-[calc(50%-2.5rem)] bg-white rounded-2xl shadow-sm border border-slate-200 p-5 opacity-75 hover:opacity-100 transition-opacity">
+                            <div class="relative group is-active">
+                                <div class="w-full bg-white rounded-2xl shadow-sm border border-slate-200 p-5 opacity-75 hover:opacity-100 transition-opacity">
                                     <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
                                         <div>
                                             <h3 class="font-bold text-slate-800 text-lg">鈴木 一郎 様</h3>
