--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body class="h-screen w-full overflow-hidden font-sans antialiased selection:bg-primary-100 selection:text-primary-800">
 
-    <div id="login-view" class="fixed inset-0 z-50 flex flex-col items-center justify-center bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] bg-slate-50 relative">
+    <div id="login-view" class="fixed inset-0 z-50 flex flex-col items-center justify-center bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] bg-slate-50">
         <div class="absolute inset-0 bg-gradient-to-br from-slate-100/90 to-primary-50/90 backdrop-blur-sm"></div>
         <div class="w-full max-w-md p-10 bg-white/80 backdrop-blur-xl rounded-3xl shadow-2xl shadow-slate-200/50 text-center fade-in border border-white relative z-10">
             <div class="flex justify-center mb-6">
@@ -403,103 +403,91 @@
                     </div>
 
                     <div id="view-todo" class="view-section hidden fade-in">
-                        <div class="mb-6 flex justify-between items-end">
-                            <div>
-                                <h1 class="text-2xl font-bold text-slate-800">本日の訪問 To-Do</h1>
-                                <p class="text-slate-500 text-sm mt-1">プランニングで設定された加算要件に基づく、必須の観察・記録項目（返戻防止）です。</p>
-                            </div>
-                            <div class="flex bg-slate-100 p-1 rounded-xl shadow-inner">
-                                <button class="px-6 py-2 bg-white text-slate-800 text-sm font-bold rounded-lg shadow-sm">午前</button>
-                                <button class="px-6 py-2 text-slate-500 text-sm font-bold rounded-lg hover:text-slate-700">午後</button>
-                            </div>
+                        <div class="mb-6">
+                            <h1 class="text-2xl font-bold text-slate-800">本日の訪問 To-Do</h1>
+                            <p class="text-slate-500 text-sm mt-1">プランニングで設定された加算要件に基づく、必須の観察・記録項目（返戻防止）です。</p>
                         </div>
 
                         <div class="space-y-6">
                             
-                            <div class="relative group is-active">
-                                <div class="w-full bg-white rounded-2xl shadow-sm border border-slate-200 p-5">
-                                    <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
-                                        <div>
-                                            <h3 class="font-bold text-slate-800 text-lg">佐藤 三郎 様</h3>
-                                            <span class="text-[10px] bg-rose-50 text-rose-700 px-2 py-0.5 rounded border border-rose-200 font-bold mt-1 inline-block">ターミナルケア加算 対象</span>
-                                        </div>
-                                        <button class="text-slate-400 hover:text-primary-600"><i class="fa-solid fa-ellipsis-vertical px-2"></i></button>
+                            <div class="w-full bg-white rounded-2xl shadow-sm border border-slate-200 p-6">
+                                <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
+                                    <div>
+                                        <h3 class="font-bold text-slate-800 text-xl">佐藤 三郎 様</h3>
+                                        <span class="text-[10px] bg-rose-50 text-rose-700 px-2 py-0.5 rounded border border-rose-200 font-bold mt-2 inline-block">ターミナルケア加算 対象</span>
                                     </div>
-                                    <ul class="space-y-3">
-                                        <li class="flex items-start gap-3">
-                                            <input type="checkbox" id="t_sato1" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
-                                            <label for="t_sato1" class="cursor-pointer flex-1 text-sm text-slate-700 font-medium">疼痛コントロール（麻薬）の効果判定と副作用の有無</label>
-                                        </li>
-                                        <li class="flex items-start gap-3">
-                                            <input type="checkbox" id="t_sato2" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
-                                            <label for="t_sato2" class="cursor-pointer flex-1 text-sm text-slate-700 font-medium">ご家族の精神的ケアの実施と記録</label>
-                                        </li>
-                                    </ul>
+                                    <button class="text-slate-400 hover:text-primary-600"><i class="fa-solid fa-ellipsis-vertical px-2"></i></button>
+                                </div>
+                                <ul class="space-y-4">
+                                    <li class="flex items-start gap-3">
+                                        <input type="checkbox" id="t_sato1" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
+                                        <label for="t_sato1" class="cursor-pointer flex-1 text-base text-slate-700 font-medium">疼痛コントロール（麻薬）の効果判定と副作用の有無</label>
+                                    </li>
+                                    <li class="flex items-start gap-3">
+                                        <input type="checkbox" id="t_sato2" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
+                                        <label for="t_sato2" class="cursor-pointer flex-1 text-base text-slate-700 font-medium">ご家族の精神的ケアの実施と記録</label>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="w-full bg-white rounded-2xl shadow-md border-2 border-primary-100 p-6">
+                                <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
+                                    <div>
+                                        <div class="flex items-center gap-2">
+                                            <h3 class="font-bold text-slate-800 text-xl">高橋 陽子 様</h3>
+                                            <span class="bg-primary-100 text-primary-700 text-[10px] font-bold px-2 py-0.5 rounded">NEW</span>
+                                        </div>
+                                        <div class="flex gap-2 mt-2 flex-wrap">
+                                            <span class="text-[10px] bg-amber-50 text-amber-700 px-2 py-0.5 rounded border border-amber-200 font-bold">特管加算(Ⅰ)</span>
+                                            <span class="text-[10px] bg-primary-50 text-primary-700 px-2 py-0.5 rounded border border-primary-200 font-bold">複数名訪問</span>
+                                            <span class="text-[10px] bg-rose-50 text-rose-700 px-2 py-0.5 rounded border border-rose-200 font-bold">長時間(90分)</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <ul class="space-y-4">
+                                    <li class="flex items-start gap-3 group/task">
+                                        <input type="checkbox" id="t_taka1" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
+                                        <label for="t_taka1" class="cursor-pointer flex-1 transition-all">
+                                            <span class="block text-slate-800 font-medium text-base">気管カニューレの固定状態・周囲皮膚の観察</span>
+                                            <span class="badge-hint inline-block mt-1 text-xs bg-slate-100 text-slate-500 px-2 py-0.5 rounded font-bold border border-slate-200"><i class="fa-solid fa-link"></i> 特管加算 必須要件</span>
+                                        </label>
+                                    </li>
+                                    <li class="flex items-start gap-3 group/task">
+                                        <input type="checkbox" id="t_taka2" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
+                                        <label for="t_taka2" class="cursor-pointer flex-1 transition-all">
+                                            <span class="block text-slate-800 font-medium text-base">主な介護者（長女）の疲労度・睡眠状態のヒアリングと記録</span>
+                                            <span class="badge-hint inline-block mt-1 text-xs bg-slate-100 text-slate-500 px-2 py-0.5 rounded font-bold border border-slate-200"><i class="fa-solid fa-link"></i> 複数名訪問 根拠記録</span>
+                                        </label>
+                                    </li>
+                                    <li class="flex items-start gap-3 group/task">
+                                        <input type="checkbox" id="t_taka3" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
+                                        <label for="t_taka3" class="cursor-pointer flex-1 transition-all">
+                                            <span class="block text-slate-800 font-medium text-base">レスパイトを目的とした長時間の介入記録（90分以上）</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                                <div class="mt-6 pt-4 border-t border-slate-100 text-right">
+                                    <button class="bg-primary-50 hover:bg-primary-100 text-primary-700 px-6 py-2.5 rounded-lg text-sm font-bold transition-all border border-primary-200">記録をシステムへ送信</button>
                                 </div>
                             </div>
 
-                            <div class="relative group is-active">
-                                <div class="w-full bg-white rounded-2xl shadow-md border-2 border-primary-100 p-5">
-                                    <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
-                                        <div>
-                                            <div class="flex items-center gap-2">
-                                                <h3 class="font-bold text-slate-800 text-lg">高橋 陽子 様</h3>
-                                                <span class="bg-primary-100 text-primary-700 text-[10px] font-bold px-2 py-0.5 rounded">NEW</span>
-                                            </div>
-                                            <div class="flex gap-1 mt-1 flex-wrap">
-                                                <span class="text-[10px] bg-amber-50 text-amber-700 px-2 py-0.5 rounded border border-amber-200 font-bold">特管加算(Ⅰ)</span>
-                                                <span class="text-[10px] bg-primary-50 text-primary-700 px-2 py-0.5 rounded border border-primary-200 font-bold">複数名訪問</span>
-                                                <span class="text-[10px] bg-rose-50 text-rose-700 px-2 py-0.5 rounded border border-rose-200 font-bold">長時間(90分)</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <ul class="space-y-3">
-                                        <li class="flex items-start gap-3 group/task">
-                                            <input type="checkbox" id="t_taka1" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
-                                            <label for="t_taka1" class="cursor-pointer flex-1 transition-all">
-                                                <span class="block text-slate-800 font-medium text-sm">気管カニューレの固定状態・周囲皮膚の観察</span>
-                                                <span class="badge-hint inline-block mt-1 text-[10px] bg-slate-100 text-slate-500 px-2 py-0.5 rounded font-bold border border-slate-200"><i class="fa-solid fa-link"></i> 特管加算 必須要件</span>
-                                            </label>
-                                        </li>
-                                        <li class="flex items-start gap-3 group/task">
-                                            <input type="checkbox" id="t_taka2" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
-                                            <label for="t_taka2" class="cursor-pointer flex-1 transition-all">
-                                                <span class="block text-slate-800 font-medium text-sm">主な介護者（長女）の疲労度・睡眠状態のヒアリングと記録</span>
-                                                <span class="badge-hint inline-block mt-1 text-[10px] bg-slate-100 text-slate-500 px-2 py-0.5 rounded font-bold border border-slate-200"><i class="fa-solid fa-link"></i> 複数名訪問 根拠記録</span>
-                                            </label>
-                                        </li>
-                                        <li class="flex items-start gap-3 group/task">
-                                            <input type="checkbox" id="t_taka3" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
-                                            <label for="t_taka3" class="cursor-pointer flex-1 transition-all">
-                                                <span class="block text-slate-800 font-medium text-sm">レスパイトを目的とした長時間の介入記録（90分以上）</span>
-                                            </label>
-                                        </li>
-                                    </ul>
-                                    <div class="mt-4 pt-3 border-t border-slate-100 text-right">
-                                        <button class="bg-primary-50 hover:bg-primary-100 text-primary-700 px-4 py-2 rounded-lg text-xs font-bold transition-all border border-primary-200">記録をシステムへ送信</button>
+                            <div class="w-full bg-white rounded-2xl shadow-sm border border-slate-200 p-6 opacity-75 hover:opacity-100 transition-opacity">
+                                <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
+                                    <div>
+                                        <h3 class="font-bold text-slate-800 text-xl">鈴木 一郎 様</h3>
+                                        <span class="text-[10px] bg-slate-100 text-slate-600 px-2 py-0.5 rounded border border-slate-200 font-bold mt-2 inline-block">基本訪問</span>
                                     </div>
                                 </div>
-                            </div>
-
-                            <div class="relative group is-active">
-                                <div class="w-full bg-white rounded-2xl shadow-sm border border-slate-200 p-5 opacity-75 hover:opacity-100 transition-opacity">
-                                    <div class="flex justify-between items-start mb-4 border-b border-slate-100 pb-3">
-                                        <div>
-                                            <h3 class="font-bold text-slate-800 text-lg">鈴木 一郎 様</h3>
-                                            <span class="text-[10px] bg-slate-100 text-slate-600 px-2 py-0.5 rounded border border-slate-200 font-bold mt-1 inline-block">基本訪問</span>
-                                        </div>
-                                    </div>
-                                    <ul class="space-y-3">
-                                        <li class="flex items-start gap-3">
-                                            <input type="checkbox" id="t_suzu1" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
-                                            <label for="t_suzu1" class="cursor-pointer flex-1 text-sm text-slate-700 font-medium">下肢浮腫の観察（心不全増悪のサイン確認）</label>
-                                        </li>
-                                        <li class="flex items-start gap-3">
-                                            <input type="checkbox" id="t_suzu2" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
-                                            <label for="t_suzu2" class="cursor-pointer flex-1 text-sm text-slate-700 font-medium">利尿剤の服薬カレンダー確認</label>
-                                        </li>
-                                    </ul>
-                                </div>
+                                <ul class="space-y-4">
+                                    <li class="flex items-start gap-3">
+                                        <input type="checkbox" id="t_suzu1" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
+                                        <label for="t_suzu1" class="cursor-pointer flex-1 text-base text-slate-700 font-medium">下肢浮腫の観察（心不全増悪のサイン確認）</label>
+                                    </li>
+                                    <li class="flex items-start gap-3">
+                                        <input type="checkbox" id="t_suzu2" class="task-checkbox mt-1 w-5 h-5 text-primary-600 bg-slate-100 border-slate-300 rounded cursor-pointer">
+                                        <label for="t_suzu2" class="cursor-pointer flex-1 text-base text-slate-700 font-medium">利尿剤の服薬カレンダー確認</label>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
